# bincode

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: cifuzz.yml  cross_platform.yml  miri.yml  rust.yml  security.yml
compatibility/: Cargo.toml  README.md
compatibility/src/: lib.rs
derive/: Cargo.toml
fuzz/: Cargo.toml
src/: config.rs  error.rs
src/de/: mod.rs  read.rs
src/enc/: write.rs
src/features/: impl_std.rs
src/features/serde/: de_owned.rs  mod.rs
