[workspace]
members = ["derive", "compatibility"]

[package]
name = "bincode"
version = "2.0.1" # remember to update html_root_url and bincode_derive
authors = [
    "Ty Overby <ty@pre-alpha.com>",
    "Zoey Riordan <zoey@dos.cafe>",
    "Victor Koenders <bincode@trangar.com>",
    "Chris Butler <chris.butler@butlergroup.net>",
]
exclude = ["logo.svg", "examples/*", ".gitignore", ".github/"]

publish = true

repository = "https://github.com/bincode-org/bincode"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy for transforming structs into bytes and vice versa!"

edition = "2024"

[features]
default = ["std", "derive"]
std = ["alloc", "serde?/std"]
alloc = ["serde?/alloc"]
derive = ["bincode_derive"]

[dependencies]
bincode_derive = { path = "derive", version = "2.0.1", optional = true }
serde = { version = "1.0.228", default-features = false, optional = true }
unty = "0.0.5"

# Used for tests
[dev-dependencies]
ouroboros = "0.18.5"
serde_derive = "1.0.228"
serde_json = { version = "1.0.149", default-features = false }
tempfile = "3.24.0"
criterion = "0.8.1"
rand = "0.8.5"
uuid = { version = "1.20.0", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
glam = { version = "0.31.0", features = ["serde"] }
bincode_1 = { version = "1.3", package = "bincode" }
serde = { version = "1.0.228", features = ["derive"] }
bumpalo = { version = "3.19.1", features = ["collections"] }

[[bench]]
name = "varint"
harness = false

[[bench]]
name = "inline"
harness = false

[[bench]]
name = "string"
harness = false

[profile.bench]
codegen-units = 1
debug = 1
lto = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
